--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "organization": true
   },
   "license": "MIT",
-  "packageManager": "pnpm@10.8.0",
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
+    "@eslint/js": "^9.29.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.31",
     "aws-cdk": "^2.1018.1",
-    "cdk-nag": "^2.36.17",
-    "eslint": "^9.28.0",
+    "cdk-nag": "^2.36.18",
+    "eslint": "^9.29.0",
     "globals": "^16.2.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
@@ -39,8 +39,8 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "2.195.0-alpha.0",
-    "@orcabus/platform-cdk-constructs": "0.0.10-beta.1",
-    "aws-cdk-lib": "^2.200.2",
+    "@orcabus/platform-cdk-constructs": "0.0.22",
+    "aws-cdk-lib": "^2.201.0",
     "constructs": "^10.4.2"
   }
 }
